; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/dma/ioat/extr_dma_v2.c_ioat2_update_pending.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/dma/ioat/extr_dma_v2.c_ioat2_update_pending.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ioat2_dma_chan = type { i32 }

@ioat_pending_level = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ioat2_dma_chan*)* @ioat2_update_pending to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ioat2_update_pending(%struct.ioat2_dma_chan* %0) #0 {
  %2 = alloca %struct.ioat2_dma_chan*, align 8
  store %struct.ioat2_dma_chan* %0, %struct.ioat2_dma_chan** %2, align 8
  %3 = load %struct.ioat2_dma_chan*, %struct.ioat2_dma_chan** %2, align 8
  %4 = call i64 @ioat2_ring_pending(%struct.ioat2_dma_chan* %3)
  %5 = load i64, i64* @ioat_pending_level, align 8
  %6 = icmp sgt i64 %4, %5
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.ioat2_dma_chan*, %struct.ioat2_dma_chan** %2, align 8
  %9 = call i32 @__ioat2_issue_pending(%struct.ioat2_dma_chan* %8)
  br label %10

10:                                               ; preds = %7, %1
  ret void
}

declare dso_local i64 @ioat2_ring_pending(%struct.ioat2_dma_chan*) #1

declare dso_local i32 @__ioat2_issue_pending(%struct.ioat2_dma_chan*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
